# AlphaPy

./: environment.yml  pyproject.toml
alphapy/: estimators.py  market_flow.py  plots.py  variables.py
