[project]
name = "alphapy"
version = "2.5.1dev0"
description = "Add your description here"
maintainers = [{name = "ScottFree LLC [Robert D. Scott II, Mark Conway]", email = "scottfree.analytics@scottfreellc.com"}]
readme = "README.rst"

requires-python = ">=3.11"

dependencies = [
    'arrow>=0.13',
    'bokeh>=1.3',
    'category_encoders>=2.1',
    'iexfinance>=0.4.3',
    'imbalanced-learn>=0.5',
    'ipython>=7.2',
    'keras>=2.3',
    'matplotlib>=3.0',
    'numpy>=1.26,<2',
    'pandas>=1.0',
    'pandas-datareader>=0.8',
    'pyfolio-reloaded>=0.9',
    'pyyaml>=5.0',
    'scikit-learn>=0.23.1',
    'scipy',
    'seaborn>=0.9',
    'tensorflow>=2.0',
]
